Disable Beacon API on WK1 DRT and WK2 when not using NETWORK_SESSION.
Created attachment 317756 [details] Patch
Comment on attachment 317756 [details] Patch Attachment 317756 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/4286688 New failing tests: fast/dom/navigator-detached-no-crash.html imported/w3c/web-platform-tests/url/failure.html
Created attachment 317764 [details] Archive of layout-test-results from ews101 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Comment on attachment 317756 [details] Patch Attachment 317756 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/4286700 New failing tests: fast/dom/navigator-detached-no-crash.html imported/w3c/web-platform-tests/url/failure.html
Created attachment 317765 [details] Archive of layout-test-results from ews107 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Comment on attachment 317756 [details] Patch Attachment 317756 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/4286858 New failing tests: fast/dom/navigator-detached-no-crash.html
Created attachment 317768 [details] Archive of layout-test-results from ews116 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Created attachment 317772 [details] Patch
Created attachment 317776 [details] Patch
Comment on attachment 317776 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=317776&action=review > LayoutTests/platform/win/TestExpectations:4054 > +# Beacon is not supported on WK1. > +http/tests/blink/sendbeacon/ [ Skip ] > +http/wpt/beacon/ [ Skip ] > +imported/blink/fast/beacon/ [ Skip ] > +imported/w3c/web-platform-tests/beacon/ [ Skip ] Instead of checking in the verbose failing results for windows wk1, should also just Skip them.
(In reply to Brady Eidson from comment #10) > Comment on attachment 317776 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=317776&action=review > > > LayoutTests/platform/win/TestExpectations:4054 > > +# Beacon is not supported on WK1. > > +http/tests/blink/sendbeacon/ [ Skip ] > > +http/wpt/beacon/ [ Skip ] > > +imported/blink/fast/beacon/ [ Skip ] > > +imported/w3c/web-platform-tests/beacon/ [ Skip ] > > Instead of checking in the verbose failing results for windows wk1, should > also just Skip them. The reason I did not skip them is that they are not beacon tests, they test other things.
Comment on attachment 317776 [details] Patch Makes sense. r+ assuming bots are happy.
Comment on attachment 317776 [details] Patch Clearing flags on attachment: 317776 Committed r220507: <http://trac.webkit.org/changeset/220507>
All reviewed patches have been landed. Closing bug.
<rdar://problem/33820090>
Is this a temporary measure, or is the idea that Beacon won't be supported in those configurations going forward?
(In reply to Sam Weinig from comment #16) > Is this a temporary measure, or is the idea that Beacon won't be supported > in those configurations going forward? Probably will not be supported on these configurations.
(In reply to Chris Dumez from comment #17) > (In reply to Sam Weinig from comment #16) > > Is this a temporary measure, or is the idea that Beacon won't be supported > > in those configurations going forward? > > Probably will not be supported on these configurations. Bummer.
(In reply to Sam Weinig from comment #18) > (In reply to Chris Dumez from comment #17) > > (In reply to Sam Weinig from comment #16) > > > Is this a temporary measure, or is the idea that Beacon won't be supported > > > in those configurations going forward? > > > > Probably will not be supported on these configurations. > > Bummer. If WK1 gets ported to NETWORK_SESSION, we can reconsider.
That seems like a tall bar, and one that seems unlikely given the use of NSURLProtocol with Legacy WebKit clients. It seems unfortunate to bifurcate the feature set. And something that shouldn't be done with consideration, we have been bitten by it before (see IndexedDB).
(In reply to Sam Weinig from comment #20) > we have been bitten by it before (see IndexedDB). What happened with IndexedDB?
(In reply to Geoffrey Garen from comment #21) > (In reply to Sam Weinig from comment #20) > > we have been bitten by it before (see IndexedDB). > > What happened with IndexedDB? People got annoyed / confused that they couldn't use it in UIWebView. The philosophy I was trying to champion for the last few years was that the web platform we expose should be as uniform, web-exposed feature wise, as possible to create a coherent story for developers.