Disable Beacon API on WK1 DRT and WK2 when not using NETWORK_SESSION https://bugs.webkit.org/show_bug.cgi?id=175401

Reviewed by Brady Eidson.

Source/WebKit:

* UIProcess/API/C/WKPreferences.cpp:
(WKPreferencesSetBeaconAPIEnabled):
(WKPreferencesGetBeaconAPIEnabled):
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updatePreferences):
* config.h:

Source/WebKitLegacy/mac:

* WebView/WebPreferenceKeysPrivate.h:
* WebView/WebPreferences.mm:
(+[WebPreferences initialize]):
(-[WebPreferences beaconAPIEnabled]): Deleted.
(-[WebPreferences setBeaconAPIEnabled:]): Deleted.
* WebView/WebPreferencesPrivate.h:
* WebView/WebView.mm:
(-[WebView _preferencesChanged:]):

Tools:

* DumpRenderTree/mac/DumpRenderTree.mm:
(enableExperimentalFeatures):

LayoutTests:

* platform/mac-elcapitan-wk2/fast/dom/navigator-detached-no-crash-expected.txt: Copied from LayoutTests/platform/mac-wk1/fast/dom/navigator-detached-no-crash-expected.txt.
* platform/mac-elcapitan-wk2/imported/w3c/web-platform-tests/url/failure-expected.txt: Added.
* platform/mac-wk1/TestExpectations:
* platform/mac-wk1/fast/dom/navigator-detached-no-crash-expected.txt:
* platform/mac-wk1/imported/w3c/web-platform-tests/url/failure-expected.txt: Added.
* platform/mac-wk2/TestExpectations:
* platform/win/TestExpectations:
* platform/win/fast/dom/navigator-detached-no-crash-expected.txt: Copied from LayoutTests/platform/mac-wk1/fast/dom/navigator-detached-no-crash-expected.txt.
* platform/win/imported/w3c/web-platform-tests/url/failure-expected.txt: Added.


Canonical link: https://commits.webkit.org/192125@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220507 268f45cc-cd09-0410-ab3c-d52691b4dbfc