Source/WebKit/config.h
@@ -78,6 +78,10 @@
 #define USE_NETWORK_SESSION 1
 #endif
 
+#ifndef ENABLE_BEACON_API
+#define ENABLE_BEACON_API 1
+#endif
+
 // FIXME: We should work towards not using CredentialStorage in WebKit2 to not have problems with digest authentication.
 #ifndef USE_CREDENTIAL_STORAGE_WITH_NETWORK_SESSION
 #define USE_CREDENTIAL_STORAGE_WITH_NETWORK_SESSION 1
