Source/WebKitLegacy/mac/WebView/WebPreferences.mm
@@ -625,7 +625,6 @@ public:
         [NSNumber numberWithBool:YES], WebKitShadowDOMEnabledPreferenceKey,
         [NSNumber numberWithBool:YES], WebKitCustomElementsEnabledPreferenceKey,
         [NSNumber numberWithBool:YES], WebKitModernMediaControlsEnabledPreferenceKey,
-        [NSNumber numberWithBool:NO], WebKitBeaconAPIEnabledPreferenceKey,
 #if ENABLE(WEBGL2)
         [NSNumber numberWithBool:NO], WebKitWebGL2EnabledPreferenceKey,
 #endif
@@ -2070,16 +2069,6 @@ static NSString *classIBCreatorID = nil;
 - (void)setWebGL2Enabled:(BOOL)enabled
 {
     [self _setBoolValue:enabled forKey:WebKitWebGL2EnabledPreferenceKey];
-}
-
-- (BOOL)beaconAPIEnabled
-{
-    return [self _boolValueForKey:WebKitBeaconAPIEnabledPreferenceKey];
-}
-
-- (void)setBeaconAPIEnabled:(BOOL)enabled
-{
-    [self _setBoolValue:enabled forKey:WebKitBeaconAPIEnabledPreferenceKey];
 }
 
 - (BOOL)forceSoftwareWebGLRendering
